Refactor `/score/` to use query parameters
